[gd_scene load_steps=3 format=3 uid="uid://db8h40ulthyyf"]

[ext_resource type="Script" path="res://Title/Title.gd" id="1_vekon"]
[ext_resource type="PackedScene" uid="uid://b1nxe0aeo6u4s" path="res://Option/Option.tscn" id="2_ivmjc"]

[node name="Title" type="Node"]
script = ExtResource("1_vekon")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.158
anchor_top = 0.218
anchor_right = 0.395
anchor_bottom = 0.699
grow_horizontal = 2
grow_vertical = 2

[node name="GameTitle" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "The Gambler"
horizontal_alignment = 1

[node name="Start" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "시작하기"

[node name="Option" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "옵션"

[node name="Quit" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "나가기"

[node name="QuitCheck" type="Panel" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="UI/QuitCheck"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/QuitCheck/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/QuitCheck/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "정말로 종료하시겠습니까?"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/QuitCheck/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="QuitYes" type="Button" parent="UI/QuitCheck/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "예"

[node name="QuitNo" type="Button" parent="UI/QuitCheck/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "아니요"

[node name="OptionContainer" type="MarginContainer" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="Option" parent="UI/OptionContainer" instance=ExtResource("2_ivmjc")]
layout_mode = 2

[connection signal="pressed" from="UI/VBoxContainer/Start" to="." method="StartGame"]
[connection signal="pressed" from="UI/VBoxContainer/Option" to="." method="OpenOption"]
[connection signal="pressed" from="UI/VBoxContainer/Quit" to="." method="QuitButton"]
[connection signal="pressed" from="UI/QuitCheck/CenterContainer/VBoxContainer/HBoxContainer/QuitYes" to="." method="QuitGame"]
[connection signal="pressed" from="UI/QuitCheck/CenterContainer/VBoxContainer/HBoxContainer/QuitNo" to="." method="QuitCancel"]
[connection signal="optionClose" from="UI/OptionContainer/Option" to="." method="CloseOption"]
